Changelog
=========

0.4 (unreleased)
-------------------
- Added supersized behavior [espen]
- Added (medialog) controlpanel [espen]


0.3.3 (2014-09-07)
-------------------
- Updated package dependency for ViewPageTemplateFile import in view.py file. [macagua]
- Added more strings classifiers items for this packages [macagua]

0.3.2 (2012-10-10)
------------------
- Removed unused settings and fixed view.py so that properties load correctly.


0.3 (2012-10-10)
------------------
- Removed loading of css an js files from template (they are in the registres)
- Removed the loader icon
- Added the supersized view to news items

0.2.9 (2012-06-12)
------------------
- Changed default setting for portrait images to exceed browser height

0.2.8 (2012-06-08)
------------------
- Added css and js to the @@supersized_view so one does not have to install the product to use that part (same way as it is done by collective.plonetruegallery).

0.2.7 (2012-06-05)
------------------
- Removed background color from css files.

0.2.6 (2012-06-01)
------------------
- moved the buttons

0.2.5 (2012-06-01)
------------------
- Better way of setting the image path


0.2.4 (2012-06-01)
------------------

- Changed image path in supersized.shutter.js

0.2.2 (2012-06-01)
------------------

- Changes in css to make it work with the other transitions

0.2.1 (2012-05-22)
------------------

- Switched to supersized 3.2.4 because the 3.2.7 version is not working.

0.2 (2012-05-22)
------------------

- Fixed registration of image dire
- Changes to css to use images
- Registered the full js files as browser resources 
- Small change in the profiles

0.1.1dev (2012-05-17)
------------------

- Removed unneeded stuff in js.

0.1dev (2012-05-15)
------------------

- Initial release